# fallacy

./: Cargo.toml  README.md
src/: alloc.rs  borrow.rs  boxed.rs  clone.rs  cmp.rs  fmt.rs  hash.rs  lib.rs  ops.rs  prelude.rs  result.rs  str.rs  string.rs  vec.rs
src/collections/: hash_map.rs  hash_set.rs  mod.rs  string.rs  vec.rs
src/sync/: arc.rs  mod.rs  weak.rs
tests/: format.rs
