[package]
name = "fallacy"
version = "0.0.0"
authors = ["David Li <davidli2010@foxmail.com>"]
edition = "2021"
rust-version = "1.57"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A library for fallible allocations, collections and operations."
keywords = ["fallible", "alloc", "allocation", "collection",]
repository = "https://github.com/fallacy-rs/fallacy.git"
homepage = "https://github.com/fallacy-rs/fallacy"
documentation = "https://docs.rs/fallacy/"

[features]
serde = ["fallacy-box/serde", "fallacy-arc/serde"]

[dependencies]
fallacy-alloc = "0.1.0"
fallacy-clone = { version = "0.1.1", features = ["derive"] }
fallacy-box = "0.1.1"
fallacy-arc = "0.1.1"
fxhash = "0.2.1"
